--- a/data/Application.css
+++ b/data/Application.css
@@ -19,72 +19,21 @@
 * Authored by: Cassidy James Blaede <c@ssidyjam.es>
 */
 
-/*
-@define-color base_color mix(@GRAPE_900, @BLUEBERRY_900, 0.125);
-@define-color colorPrimary mix(@GRAPE_700, @BLUEBERRY_700, 0.33);
-@define-color colorAccent @GRAPE_500;
-@define-color textColorPrimary alpha(white, 0.9);
-@define-color textColorPrimaryShadow alpha(shade(@colorPrimary, 0.6), 0.4);
+@define-color colorPrimary @GRAPE_700;
+@define-color textColorPrimary @SILVER_100;
+@define-color textColorPrimaryShadow @SILVER_700;
 
-.titlebar:not(.default-decoration) {
-  background-image:
-    linear-gradient(
-      to bottom,
-      alpha(white, 0.1),
-      alpha(black, 0.1)
-    ),
-    linear-gradient(120deg, @BLUEBERRY_700, @GRAPE_700 67%);
-  color: @textColorPrimary;
-}
-
-.titlebar button.raised {
-  background-image: linear-gradient(
-    to bottom,
-    alpha(white, 0.1),
-    alpha(black, 0.1)
-  );
-  border-color: shade(@colorPrimary, 0.75);
-  color: @textColorPrimary;
-  text-shadow: 0 1px @textColorPrimaryShadow;
-  box-shadow:
-    inset 0 0 0 1px alpha(shade(@colorPrimary, 1.4), 0.05),
-    inset 0 1px 0 0 alpha(shade(@colorPrimary, 1.4), 0.45),
-    inset 0 -1px 0 0 alpha(shade(@colorPrimary, 1.4), 0.15),
-    0 1px 0 0 alpha(shade(@colorPrimary, 1.4), 0.3);
-  -gtk-icon-shadow: 0 1px @textColorPrimaryShadow;
-}
-
-.titlebar button.raised:active,
-.titlebar button.raised:checked {
-    background-color: alpha(#000, 0.05);
-    background-image: none;
-    border-color: alpha(#000, 0.27);
-    box-shadow:
-        inset 0 0 0 1px alpha(#000, 0.05),
-        0 1px 0 0 alpha(@bg_highlight_color, 0.3);
-}
-
-.titlebar button.linked {
-  border-radius: 0;
-  border-left-width: 0;
-}
-
-.titlebar button.linked:first-child {
-  border-left-width: 1px;
-  border-top-left-radius: 2.5px;
-  border-bottom-left-radius: 2.5px;
-}
-
-.titlebar button.linked:last-child {
-  padding: 0;
-  border-top-right-radius: 2.5px;
-  border-bottom-right-radius: 2.5px;
+.titlebar button.raised,
+.titlebar button.raised:active
+ { /* ??? */
+    color: @textColorPrimary;
 }
 
 .titlebar entry {
   background: alpha(@GRAPE_900, 0.5);
   color: @textColorPrimary;
   text-shadow: none;
+  cursor: @textColorPrimary;
 }
 
 .titlebar entry image {
@@ -94,4 +43,3 @@
 .titlebar entry image:hover {
     color: alpha(@textColorPrimary, 0.75);
 }
-*/
