--- a/data/Application.css
+++ b/data/Application.css
@@ -1,5 +1,6 @@
 /*
-* Copyright ⓒ 2019 Cassidy James Blaede (https://cassidyjames.com)
+* Copyright ⓒ 2019 Cassidy James Blaede (https://cassidyjames.com),
+*           ⓒ 2019 Max Rottenkolber (https://mr.gy)
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public
@@ -16,7 +17,7 @@
 * Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
 * Boston, MA 02110-1301 USA
 *
-* Authored by: Cassidy James Blaede <c@ssidyjam.es>
+* Authored by: Cassidy James Blaede <c@ssidyjam.es>, Max Rottenkolber <max@mr.gy>
 */
 
 @define-color colorPrimary @GRAPE_700;
@@ -26,7 +27,7 @@
 .titlebar entry {
   background: alpha(@GRAPE_900, 0.5);
   color: @textColorPrimary;
-  text-shadow: 1 1 @textColorPrimaryShadow;
+  text-shadow: 1px 1px @textColorPrimaryShadow;
   caret-color: @textColorPrimary;
 }
 
